clarify description of clients option

--- a/toasts/data/toasts.ini
+++ b/toasts/data/toasts.ini
@@ -1,7 +1,7 @@
 # Config file for Toasts
 
 [ general ]
-clients = ,   # List of sites to enable - github, etc
+clients = ,   # List of sites to enable(seperated by commas) - github, etc
 timeout = 7   # Connection timeout, in seconds
 check_every = 3   # Check for notifications every ___ minutes; default 3 minutes
 
