add min value for options in description

--- a/toasts/data/toasts.ini
+++ b/toasts/data/toasts.ini
@@ -2,8 +2,8 @@
 
 [ general ]
 clients = ,   # List of sites to enable(seperated by commas) - github, etc
-timeout = 7   # Connection timeout, in seconds
-check_every = 3   # Check for notifications every ___ minutes; default 3 minutes
+timeout = 7   # Connection timeout, in seconds. Min value - 1
+check_every = 3   # Check for notifications every ___ minutes; default 3 minutes. Min value - 2
 
 [ sites ]
 
