--- a/toasts/data/config.yaml
+++ b/toasts/data/config.yaml
@@ -1,11 +1,21 @@
 # Config file for toasts
 
 general:
-        clients: []   # List of sites to enable; comma seperated list
-        timeout: 7    # Connection timeout, in seconds. Min value - 1
-        check_every: 3    # Check for notifications every ___ minutes; default 3 minutes. Min value - 2
+        # List of sites to enable; comma seperated list
+        # Default: []
+        clients: []
+        # Connection timeout, in seconds. Min value - 1
+        # Default: 7 ; Minimum Value: 1
+        timeout: 7
+        # Check for notifications every ___ minutes
+        # Default: 3 ; Minimum value: 2
+        check_every: 3
 
 sites:
         github:
-                username: GH_UNAME    # *Environment variable* which holds your github username
-                token: GH_TOKEN    # *Environment variable* which holds a personal access token for authentication
+                # *Environment variable* which holds your github username
+                # Default: GH_UNAME
+                username: GH_UNAME
+                # *Environment variable* which holds a personal access token for authentication
+                # Default: GH_TOKEN
+                token: GH_TOKEN
