--- a/toasts/data/config.yaml
+++ b/toasts/data/config.yaml
@@ -13,6 +13,10 @@ general:
         # Show notification for ___ seconds
         # Default: 7 ; Minimum value: 2
         notif_timeout: 7
+        # Maximum number of notifications to show at a time, of individual clients.
+        # Default: 2
+        # Note: Value of 0 will show all notifications; it may clutter your workspace.
+        notif_max_show: 2
 
 sites:
         github:
