--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python = "^3.4"
 confuse = "^0.5.0"
 requests = "^2.19"
 plyer = "^1.3.0"
+dbus-python = { version = "^1.2", platform = "linux" }
 
 [tool.poetry.scripts]
 toasts = "toasts.main:main"
